--- a/css/app.css
+++ b/css/app.css
@@ -150,7 +150,6 @@ table.float-center {
 
 body,
 table.body,
-h2,
 p,
 td,
 th,
@@ -163,17 +162,6 @@ a {
   Margin: 0;
   text-align: left;
   line-height: 1.4; }
-
-h2 {
-  color: inherit;
-  word-wrap: normal;
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: normal;
-  margin-bottom: 10px;
-  Margin-bottom: 10px; }
-
-h2 {
-  font-size: 30px; }
 
 body,
 table.body,
@@ -300,18 +288,8 @@ sup {
 .product-logo {
   max-width: 250px; }
 
-h2 {
-  font-size: 24px;
-  color: #ffffff;
-  text-align: center; }
-
-.bottom-banner {
-  background: #351c58; }
-
 @media only screen and (max-width: 616px) {
   .social-media img {
     width: 42px !important;
     height: 42px !important;
-    margin: 0 5px; }
-  .hide-hardbreak {
-    display: none; } }
+    margin: 0 5px; } }
